--- a/data_process_app.ipynb
+++ b/data_process_app.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "id": "704a7fc4-b135-446d-9932-5520f1d491cc",
    "metadata": {
     "tags": []
@@ -325,15 +325,12 @@
     "            'Mezuniyet Tarihi': []\n",
     "            }\n",
     "    df = pd.DataFrame(data)\n",
-    "    \n",
-    "    # Add a button to open the DataFrame in a new tab\n",
-    "    if st.button(\"Show the format of the Graduation List in New Tab\"):\n",
-    "        # Save the DataFrame to an HTML file\n",
-    "        df.to_html(\"dataframe.html\", index=False)\n",
-    "\n",
-    "        # Open the HTML file in a new tab\n",
-    "        new_tab_url = \"dataframe.html\"\n",
-    "        webbrowser.open_new_tab(new_tab_url)\n",
+    "         \n",
+    "    # Add a checkbox to show/hide the DataFrame\n",
+    "    show_df = st.checkbox(\"Check the box to see the required format:\")\n",
+    "    if show_df:\n",
+    "        st.write(\"Excel format for Graduation List:\")\n",
+    "        st.dataframe(df)  # Display the DataFrame when the checkbox is checked\n",
     "    ###################################\n",
     "        \n",
     "\n",
@@ -426,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a0e93f-2a0d-413e-9b66-a29ed5866f4b",
+   "id": "2db3afa4-9ef7-459a-8fc7-418db98d7da4",
    "metadata": {},
    "outputs": [],
    "source": []
