--- a/data_process_app.ipynb
+++ b/data_process_app.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "id": "704a7fc4-b135-446d-9932-5520f1d491cc",
    "metadata": {
     "tags": []
@@ -327,7 +327,7 @@
     "    df = pd.DataFrame(data)\n",
     "         \n",
     "    # Add a checkbox to show/hide the DataFrame\n",
-    "    show_df = st.checkbox(\"Check the box to see the required format:\")\n",
+    "    show_df = st.checkbox(\"Check the box to see the required format\")\n",
     "    if show_df:\n",
     "        st.write(\"Excel format for Graduation List:\")\n",
     "        st.dataframe(df)  # Display the DataFrame when the checkbox is checked\n",
