--- a/data_process_app.ipynb
+++ b/data_process_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "id": "c68470a7-0d5c-4d64-bbd2-d5fdddf77f7b",
    "metadata": {
     "tags": []
@@ -232,15 +232,16 @@
     "    # Remove the students who has zero PC in any column\n",
     "    df = df[(df != 0).all(1)].reset_index(drop=True)\n",
     "    \n",
+    "    df_copy = df.copy(deep=True)\n",
     "    # Convert it to percentage\n",
     "    df.iloc[:, 3:] = '%' + (df.iloc[:, 3:] * 100).round(1).astype(str)\n",
     "    \n",
-    "    return df"
+    "    return df, df_copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "id": "704a7fc4-b135-446d-9932-5520f1d491cc",
    "metadata": {
     "tags": []
@@ -324,13 +325,13 @@
     "            'Mezuniyet Yılı': [],\n",
     "            'Mezuniyet Tarihi': []\n",
     "            }\n",
-    "    df = pd.DataFrame(data)\n",
+    "    df_sample = pd.DataFrame(data)\n",
     "         \n",
     "    # Add a checkbox to show/hide the DataFrame\n",
     "    show_df = st.checkbox(\"Check the box to see the required format\")\n",
     "    if show_df:\n",
     "        st.write(\"Excel format for Graduation List:\")\n",
-    "        st.dataframe(df)  # Display the DataFrame when the checkbox is checked\n",
+    "        st.dataframe(df_sample)  # Display the DataFrame when the checkbox is checked\n",
     "    ###################################\n",
     "        \n",
     "\n",
@@ -395,7 +396,7 @@
     "\n",
     "            st.title('Result')\n",
     "            df = process_result_dfs_v3(result_dfs, df_pc_dersler)\n",
-    "            df = append_average_row(df)\n",
+    "            df, df_copy = append_average_row(df)\n",
     "            st.table(df)\n",
     "\n",
     "            # Create a download button\n",
@@ -417,13 +418,30 @@
     "        else: # when the files are not uploaded\n",
     "            # Display a warning message\n",
     "            st.warning(\"This is a warning message. Please upload the necessary files.\")\n",
-    "            "
+    "            \n",
+    "        \n",
+    "        # Extract column names and percentages for plotting\n",
+    "        columns = df_copy.columns[3:]  \n",
+    "        percentages = df_copy.iloc[-1, 3:] * 100\n",
+    "\n",
+    "        # Create a bar plot\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        plt.bar(columns, percentages, color='blue')\n",
+    "        plt.xlabel('Performance Outcomes')\n",
+    "        plt.ylabel('Average Performance Outcomes Success Percentage (%)')\n",
+    "        plt.title('Average Success Percentages by Performance Outcomes')\n",
+    "        \n",
+    "        # Add grid lines\n",
+    "        plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "\n",
+    "        # Display the plot\n",
+    "        st.pyplot(plt)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db3afa4-9ef7-459a-8fc7-418db98d7da4",
+   "id": "41a50544-8d28-4c45-b4e6-556e25bf6ba8",
    "metadata": {},
    "outputs": [],
    "source": []
